force-app/main/default/objects/Budget_School_Services_Costs__c.object
<CustomObject>
    <fields>
        <fullName>Assumptions__c</fullName>
        <label>Assumptions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Average_Cost_Per_Route__c</fullName>
        <label>Average Cost Per Route</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Cost_of_Uniform_Set__c</fullName>
        <label>Average Cost of Uniform Set</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Lunch__c</fullName>
        <label>Cost Per Lunch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_for_School_Tex__c</fullName>
        <label>Cost for School (Tex)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_for_School__c</fullName>
        <formula>(( (Students_Using_Service__c * School_Budget__r.Number_of_Students__c)+ Staff_Lunches__c  )* (Cost_Per_Lunch__c * School_Days__c))+( Average_Cost_Per_Route__c * Number_of_Routes__c)+( (Students_Using_Service__c*School_Budget__r.Number_of_Students__c) * Average_Cost_of_Uniform_Set__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost for School</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Routes__c</fullName>
        <label>Number of Routes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>School_Budget__c</fullName>
        <label>School Budget</label>
        <referenceTo>School_Budget__c</referenceTo>
        <relationshipLabel>Budget - School Services Costs</relationshipLabel>
        <relationshipName>Budget_School_Services_Costs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>School_Days__c</fullName>
        <label>School Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Staff_Lunches__c</fullName>
        <label>Staff Lunches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Students_Using_Service__c</fullName>
        <label>% Students Using Service</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Budget - School Services Costs</label>
    <nameField>
        <displayFormat>SS-{0000}</displayFormat>
        <label>Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget - School Services Costs</pluralLabel>
    <recordTypes>
        <fullName>Bus_Cost</fullName>
        <active>true</active>
        <label>Bus Cost</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lunch_Cost</fullName>
        <active>true</active>
        <label>Lunch Cost</label>
    </recordTypes>
    <recordTypes>
        <fullName>Uniform_Costs</fullName>
        <active>true</active>
        <label>Uniform Costs</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Locked</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(School_Budget__r.Locked__c) =&quot;Yes&quot;</errorConditionFormula>
        <errorMessage>This School Budget is Locked. Please contact the Group Administrator for Details</errorMessage>
    </validationRules>
</CustomObject>